--- a/src/assets/pages/GeneratePage.module.css
+++ b/src/assets/pages/GeneratePage.module.css
@@ -1,5 +1,5 @@
 .container {
-    height: 300px;
+    /* height: 300px; */
     border: 1px solid black;
     padding: 20px 35px;
     position: relative;
@@ -155,4 +155,26 @@
 
 .dayPicker {
     margin-left: 24px;
+}
+
+.lecturerLabelContainer {
+    padding-top: 15px;
+}
+
+.lecturerDayContainer {
+    display: flex;
+}
+
+.lecturerTimePickerContainer {
+    display: flex;
+    flex-direction: row;
+    width: 480px;
+    justify-content: space-between;
+    margin-right: 15px;
+}
+
+.unavailableHeader {
+    height: 40px;
+    line-height: 60px;
+    border-bottom: 1px solid #64748B;
 }
