--- a/src/assets/components/Header/Header.module.css
+++ b/src/assets/components/Header/Header.module.css
@@ -17,6 +17,7 @@ a {
     left: 0px;
     padding-bottom: 20px;
     border-bottom: 1px solid black;
+    background-color: #F8F8F8;
 }
 
 .buttonContainer {
