Replace tabs into select
Replace the fixed-positioned tabs into select. Could add a stepper to show the creating progress or use a screen size library to switch between the tabs and the select.

--- a/src/assets/pages/GeneratePage.module.css
+++ b/src/assets/pages/GeneratePage.module.css
@@ -6,6 +6,20 @@
   margin-bottom: 60px;
 }
 
+.createSelect {
+  position: absolute;
+  top: -12px;
+  left: 20px;
+  padding: 0px 12px;
+  background: #f8f8f8;
+  cursor: pointer;
+  border: none;       /* Removes the border    */
+  width: 150px;       /* Adjusts the width     */
+  height: 22px;       /* Adjusts the height    */
+  font-size: 15px;    /* Adjusts the font size */
+  outline: none;      /* Removes the outline   */
+}
+
 .containerHeader1 {
   position: absolute;
   top: -12px;
