--- a/src/assets/pages/SolutionPage.module.css
+++ b/src/assets/pages/SolutionPage.module.css
@@ -1,27 +1,27 @@
 .solutionPage {
-  margin: 0px 55px;
+  /* margin: 0px 55px; */
 }
 
 .solveButton {
-  position: fixed !important;
+  /* position: fixed !important;
   bottom: 20px;
-  right: 20px;
+  right: 20px; */
   border-radius: 0px !important;
   width: 142px;
 }
 
 .importButton {
-  position: fixed !important;
+  /* position: fixed !important;
   bottom: 70px;
-  right: 20px;
+  right: 20px; */
   border-radius: 0px !important;
   width: 142px;
 }
 
 .exportButton {
-  position: fixed !important;
+  /* position: fixed !important;
   bottom: 120px;
-  right: 20px;
+  right: 20px; */
   border-radius: 0px !important;
   width: 142px;
 }
@@ -53,7 +53,7 @@
   height: 40px;
   line-height: 38px;
 
-  margin-bottom: 15px;
+  margin-bottom: 50px;
 }
 
 .moduleTitle {
@@ -591,7 +591,7 @@
   border-radius: 0px !important;
   width: 90px;
   height: 40px;
-  position: fixed !important;
+  /* position: fixed !important;
   left: 25px;
-  bottom: 15px;
+  bottom: 15px; */
 }
